# quizzify

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
quizzify/: main.py
quizzify/api/artists/: __init__.py  router.py  service.py
quizzify/api/auth/: router.py  service.py
quizzify/api/songs/: __init__.py  router.py  service.py
quizzify/databases/: __init__.py  crud.py  db_connection.py  init.sql
quizzify/spotify/: spotify_headers.py  spotify_requests.py  spotify_token_manager.py  spotify_user_info.py
quizzify/utils/: helpers.py  schemas.py  singleton.py
src/: __init__.py  main.py
src/api/auth/: router.py  service.py
src/databases/: crud.py  init.sql
src/quiz/: main.py
src/quiz/api/: __init__.py  router.py
src/quiz/question/: __init__.py
src/quiz/utils/: __init__.py
src/quizzify/: logging.conf  main.py
src/quizzify/quiz/: __init__.py
src/quizzify/quiz/auth/: router.py  service.py
src/quizzify/spotify/: spotify_auth_service.py
src/spotify/: __init__.py  spotify_auth_service.py  spotify_token_manager.py  spotify_user_info.py
src/utils/: helpers.py  singleton.py
tests/question/: __init__.py
tests/quiz/: __init__.py
tests/quiz/utils/: __init__.py
tests/quizzify/: __init__.py  test_main.py
tests/quizzify/api/: __init__.py
tests/quizzify/api/artists/: __init__.py  test_router.py
tests/quizzify/quiz/auth/: __init__.py
tests/quizzify/quiz/utils/: test_helpers.py
tests/quizzify/spotify/: __init__.py  test_spotify_auth_service.py
tests/quizzify/utils/: test_helpers.py
