[tool.poetry]
name = "quizzify"
version = "0.1.0"
description = "Simple quizz."
authors = [
    "Alanna DEVLIN GENIN <alannadevlingenin@gmail.com>"
]
readme = "README.md"
license = "Apache-2.0"

[tool.pydocstyle]
convention = "numpy"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "0.1.0"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
