[tool.poetry]
name = "quizzify"
version = "0.1.0"
description = "Simple quizz."
authors = [
    "Alanna DEVLIN GENIN <alannadevlingenin@gmail.com>"
]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "src"}]

[tool.pre_commit]
hooks = [
  "pydocstyle",
  "mypy",
  "black",
  "flake8",
  "isort",
  "bandit",
  "pytest",
  "commitizen"
]

[tool.pydocstyle]
convention = "numpy"

[tool.black]
line-length = 88
include = '\.pyi?$'

# enables pytest to find the source code
[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "0.1.0"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[mypy-requests]
ignore_missing_imports = true

[tool.mypy]
#ignore_missing_imports = true
python_version = "3.9"
#disallow_untyped_defs = true
#show_error_codes = true
#no_implicit_optional = true
#warn_return_any = true
#warn_unused_ignores = true
exclude = ["tests"]

[bandit]
exclude = ["tests/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
